<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.MainActivity"
    android:orientation="vertical"
    android:layout_margin="26sp">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnAdd"
        android:text="@string/add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerUser"/>
    <Button
        android:id="@+id/btnDelete"
        android:text="@string/delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteUsers"/>

    <Button
        android:id="@+id/btnGetUsers"
        android:text="@string/getUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getUsers"/>

    <Button
        android:id="@+id/btnTurnOnBT"
        android:text="@string/turnon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="turnOnBluetooth"/>

    <Button
        android:id="@+id/btnTurnOffBT"
        android:text="@string/turnoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="turnOffBluetooth"/>

    <Button
        android:id="@+id/getListOfDevices"
        android:text="@string/getUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getPairedDevices"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:textAlignment="center"/>


    <TextView
        android:id="@+id/text2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:textAlignment="center"/>


</LinearLayout>